--- a/insideconnect-app/backend/package.json
+++ b/insideconnect-app/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "path": "^0.12.7",
     "pg": "^8.16.0"
   },
   "devDependencies": {
