--- a/insideconnect-app/package.json
+++ b/insideconnect-app/package.json
@@ -17,15 +17,19 @@
     "@heroui/link": "2.2.17",
     "@heroui/listbox": "2.3.19",
     "@heroui/navbar": "2.2.18",
+    "@heroui/react": "^2.7.10",
     "@heroui/snippet": "2.2.21",
     "@heroui/switch": "2.2.18",
     "@heroui/system": "2.4.16",
     "@heroui/theme": "2.4.16",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.23",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
+    "knex": "^3.1.0",
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "react": "18.3.1",
