--- a/insideconnect-app/tsconfig.json
+++ b/insideconnect-app/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "backend/emails/VerificationEmail.js"],
   "exclude": ["node_modules"]
 }
