--- a/insideconnect-app/package.json
+++ b/insideconnect-app/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "2.1.1",
+    "crypto": "^1.0.1",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
     "jwt-decode": "^4.0.0",
