--- a/insideconnect-app/package.json
+++ b/insideconnect-app/package.json
@@ -48,7 +48,7 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
-    "autoprefixer": "10.4.21",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
     "eslint": "9.25.1",
     "eslint-config-next": "15.3.1",
