--- a/insideconnect-app/package.json
+++ b/insideconnect-app/package.json
@@ -28,14 +28,20 @@
     "bcryptjs": "^3.0.2",
     "clsx": "2.1.1",
     "crypto": "^1.0.1",
+    "dotenv": "^16.5.0",
     "framer-motion": "11.13.1",
+    "globals": "16.0.0",
+    "postcss": "8.5.3",
     "intl-messageformat": "10.7.16",
     "jwt-decode": "^4.0.0",
     "knex": "^3.1.0",
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "tailwind-variants": "0.3.0",
+    "tailwindcss": "3.4.16",
+    "typescript": "5.6.3"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
