--- a/insideconnect-app/package.json
+++ b/insideconnect-app/package.json
@@ -24,6 +24,7 @@
     "@heroui/theme": "2.4.16",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.23",
+    "autoprefixer": "^10.4.21",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "2.1.1",
@@ -31,17 +32,14 @@
     "dotenv": "^16.5.0",
     "framer-motion": "11.13.1",
     "globals": "16.0.0",
-    "postcss": "8.5.3",
     "intl-messageformat": "10.7.16",
     "jwt-decode": "^4.0.0",
     "knex": "^3.1.0",
     "next": "15.3.1",
     "next-themes": "0.4.6",
+    "postcss": "^8.5.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tailwind-variants": "0.3.0",
-    "tailwindcss": "3.4.16",
-    "typescript": "5.6.3"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
@@ -54,8 +52,6 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
-    "autoprefixer": "^10.4.21",
-    "dotenv": "^16.5.0",
     "eslint": "9.25.1",
     "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "10.1.2",
@@ -67,10 +63,9 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.0.0",
-    "postcss": "8.5.3",
     "prettier": "3.5.3",
-    "tailwind-variants": "0.3.0",
-    "tailwindcss": "3.4.16",
-    "typescript": "5.6.3"
+    "tailwind-variants": "^0.3.0",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.6.3"
   }
 }
