--- a/insideconnect-app/package.json
+++ b/insideconnect-app/package.json
@@ -24,14 +24,11 @@
     "@heroui/theme": "2.4.16",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.23",
-    "autoprefixer": "^10.4.21",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "2.1.1",
     "crypto": "^1.0.1",
-    "dotenv": "^16.5.0",
     "framer-motion": "11.13.1",
-    "globals": "^16.2.0",
     "intl-messageformat": "10.7.16",
     "jwt-decode": "^4.0.0",
     "knex": "^3.1.0",
@@ -40,8 +37,6 @@
     "postcss": "^8.5.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwind-variants": "^1.0.0",
-    "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
@@ -50,11 +45,14 @@
     "@eslint/js": "9.25.1",
     "@next/eslint-plugin-next": "15.3.1",
     "@react-types/shared": "3.29.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/node": "22.15.3",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
+    "autoprefixer": "^10.4.21",
+    "dotenv": "^16.5.0",
     "eslint": "9.25.1",
     "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "10.1.2",
@@ -65,6 +63,9 @@
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-unused-imports": "4.1.4",
-    "prettier": "3.5.3"
+    "globals": "^16.2.0",
+    "prettier": "3.5.3",
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^4.1.10"
   }
 }
