--- a/insideconnect-app/package.json
+++ b/insideconnect-app/package.json
@@ -24,18 +24,22 @@
     "@heroui/theme": "2.4.16",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.23",
+    "autoprefixer": "^10.4.21",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "2.1.1",
     "crypto": "^1.0.1",
+    "dotenv": "^16.5.0",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
     "jwt-decode": "^4.0.0",
     "knex": "^3.1.0",
     "next": "15.3.1",
     "next-themes": "0.4.6",
+    "postcss": "^8.5.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
@@ -49,8 +53,6 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
-    "autoprefixer": "^10.4.21",
-    "dotenv": "^16.5.0",
     "eslint": "9.25.1",
     "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "10.1.2",
@@ -62,9 +64,7 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "globals": "^16.2.0",
-    "postcss": "^8.5.5",
     "prettier": "3.5.3",
-    "tailwind-variants": "^1.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwind-variants": "^1.0.0"
   }
 }
