--- a/insideconnect-app/package.json
+++ b/insideconnect-app/package.json
@@ -31,6 +31,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "framer-motion": "11.13.1",
+    "globals": "^16.2.0",
     "intl-messageformat": "10.7.16",
     "jwt-decode": "^4.0.0",
     "knex": "^3.1.0",
@@ -39,6 +40,7 @@
     "postcss": "^8.5.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
@@ -63,8 +65,6 @@
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-unused-imports": "4.1.4",
-    "globals": "^16.2.0",
-    "prettier": "3.5.3",
-    "tailwind-variants": "^1.0.0"
+    "prettier": "3.5.3"
   }
 }
