moved depends from dev to main depends

--- a/insideconnect-app/package.json
+++ b/insideconnect-app/package.json
@@ -24,6 +24,10 @@
     "@heroui/theme": "2.4.16",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.23",
+    "@react-types/shared": "^3.30.0",
+    "@types/node": "^24.0.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -49,10 +53,6 @@
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.25.1",
     "@next/eslint-plugin-next": "15.3.1",
-    "@react-types/shared": "3.29.0",
-    "@types/node": "22.15.3",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
     "eslint": "9.25.1",
