--- a/insideconnect-app/package.json
+++ b/insideconnect-app/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@eslint/compat": "^1.3.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.29.0",
     "@heroui/button": "2.2.20",
     "@heroui/code": "2.2.15",
     "@heroui/input": "2.4.20",
@@ -22,18 +25,28 @@
     "@heroui/switch": "2.2.18",
     "@heroui/system": "2.4.16",
     "@heroui/theme": "2.4.16",
+    "@next/eslint-plugin-next": "^15.3.3",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.23",
     "@react-types/shared": "^3.30.0",
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
     "autoprefixer": "^10.4.21",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "2.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "framer-motion": "11.13.1",
     "globals": "^16.2.0",
     "intl-messageformat": "10.7.16",
@@ -49,22 +62,9 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@eslint/compat": "1.2.8",
-    "@eslint/eslintrc": "3.3.1",
-    "@eslint/js": "9.25.1",
-    "@next/eslint-plugin-next": "15.3.1",
-    "@typescript-eslint/eslint-plugin": "8.31.1",
-    "@typescript-eslint/parser": "8.31.1",
-    "eslint": "9.25.1",
-    "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "10.1.2",
-    "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "5.2.6",
-    "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-unused-imports": "4.1.4",
     "prettier": "3.5.3"
   }
 }
