--- a/insideconnect-app/package.json
+++ b/insideconnect-app/package.json
@@ -42,8 +42,11 @@
     "dotenv": "^16.5.0",
     "eslint": "^9.29.0",
     "eslint-config-next": "^15.3.3",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-unused-imports": "^4.1.4",
@@ -55,16 +58,11 @@
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "postcss": "^8.5.5",
+    "prettier": "^3.5.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
-  },
-  "devDependencies": {
-    "eslint-config-prettier": "10.1.2",
-    "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-prettier": "5.2.6",
-    "prettier": "3.5.3"
   }
 }
